crates/crypto/src/olm/group_sessions/snapshots/crypto__olm__group_sessions__sender_data__tests__snapshot_sender_data-2.snap
---
source: crates/crypto/src/olm/group_sessions/sender_data.rs
expression: "SenderData::UnknownDevice { legacy_session: true, owner_check_failed: false, }"
---
{
  "UnknownDevice": {
    "legacy_session": true
  }
}
