crates/crypto/src/olm/group_sessions/snapshots/crypto__olm__group_sessions__sender_data__tests__snapshot_sender_data-5.snap
---
source: crates/crypto/src/olm/group_sessions/sender_data.rs
expression: "SenderData::SenderUnverified(KnownSenderData\n{\n    user_id: owned_user_id!(\"@foo:bar.baz\"), device_id: None, master_key:\n    Box::new(Ed25519PublicKey::from_slice(&[1u8; 32]).unwrap()),\n})"
---
{
  "SenderUnverified": {
    "user_id": "@foo:bar.baz",
    "device_id": null,
    "master_key": "AQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQE"
  }
}
