crates/crypto/src/olm/group_sessions/snapshots/crypto__olm__group_sessions__sender_data__tests__snapshot_sender_data.snap
---
source: crates/crypto/src/olm/group_sessions/sender_data.rs
expression: "SenderData::UnknownDevice { legacy_session: false, owner_check_failed: true, }"
---
{
  "UnknownDevice": {
    "legacy_session": false,
    "owner_check_failed": true
  }
}
